--- a/source/FastRsync.Compression/FastRsync.Compression.csproj
+++ b/source/FastRsync.Compression/FastRsync.Compression.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net462;netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Grzegorz Blok</Authors>
     <Company />
@@ -12,10 +12,10 @@
     <Description>.NET library for file compression compatible with Rsync algorithm.</Description>
     <PackageProjectUrl>https://github.com/GrzegorzBlok/FastRsyncNet</PackageProjectUrl>
     <PackageTags>sync rsync synchronization compression</PackageTags>
-    <AssemblyVersion>1.1.0</AssemblyVersion>
-    <FileVersion>1.1.0</FileVersion>
-    <Version>1.1.0</Version>
-  </PropertyGroup>
+    <AssemblyVersion>1.1.1</AssemblyVersion>
+    <FileVersion>1.1.1</FileVersion>
+    <Version>1.1.1</Version>
+</PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ProDotNetZip" Version="1.19.0" />
