--- a/source/FastRsync/FastRsync.csproj
+++ b/source/FastRsync/FastRsync.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net7.0'">
+    <LangVersion>12.0</LangVersion>
+  </PropertyGroup>
   <PropertyGroup>
+
     <TargetFrameworks>net462;netstandard2.0;net7.0</TargetFrameworks>
     <PackageId>FastRsyncNet</PackageId>
     <Authors>Grzegorz Blok</Authors>
@@ -34,11 +38,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="8.0.5" />
-    <PackageReference Include="System.IO.Hashing" Version="8.0.0" />
-    <PackageReference Include="System.Memory" Version="4.6.0" Condition="'$(TargetFramework)' != 'net7.0'" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5"/>
+    <PackageReference Include="System.IO.Hashing" Version="8.0.0"/>
+    <PackageReference Include="System.Memory" Version="4.6.0" Condition="'$(TargetFramework)' != 'net7.0'"/>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <Folder Include="Properties\"/>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
+    <PackageReference Include="System.Text.Json" Version="7.0.3"/>
   </ItemGroup>
 </Project>
